package app.com.server.enums;

public enum FriendshipInvitationStatus {
    PENDING,
    ACCEPTED,
    BLOCKED,
    CANCELLED
}
