@startuml Linkup_diagramm_class
class User {
    -id: UUID
    -firstName: String
    -lastName: String
    -username: String
    -email: String
    -password: String
   
}

class Friendship {
    -id: UUID
    -status: FriendshipInvitationStatus
    -createdAt: Instant
    -updatedAt: Instant
}

class Post {
    -id: String
    -title: String
    -content: String
    -image: String
    -createdAt: LocalDateTime
    -updatedAt: LocalDateTime
}

class Comment {
    -id: String
    -content: String
    -createdAt: LocalDateTime
    -updatedAt: LocalDateTime
}

class Reaction {
    -id: String
    -name: String
}



class ChatSession {
    -id: UUID
    -lastMessage: Message
}

class ChatParticipant {
    -id: UUID
    -joinedAt: Instant
    -lastReadAt: Instant
}

class Message {
    -id: UUID
    -message: String
    -sender: String
    -createdAt: Instant
}


enum FriendshipInvitationStatus {
    PENDING,
    ACCEPTED,
    BLOCKED,
    CANCELLED
}


User "1" -- "0..*" Post : "manage"



Post "1" *-- "0..*" Comment : "has"
Post "1" *-- "0..*" Reaction : "has"

User "*" -- "0..*" Friendship : "manage"

User "1" -- "1" ChatParticipant : "participates"
ChatSession "1" *-- "2" ChatParticipant : "has"
ChatSession "1" -- "1..*" Message : "contains"







@enduml